--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@googlemaps/js-api-loader": "^1.16.8",
     "axios": "^1.7.4",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
     "connect": "^3.7.0",
